--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -3,5 +3,7 @@
 
     <string name="hello">Hello World, ISKforEVEOnlineActivity!</string>
     <string name="app_name">ISK for EVE Online</string>
+    <string name="start_pilots">Piloten</string>
+    <string name="pilots_context_remove">Remove API key</string>
 
 </resources>
