--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -26,5 +26,10 @@
     <string name="start_character_choose">Choose character</string>
     <string name="start_optmenu_history">History</string>
     <string name="history_no_data">No data</string>
+    <string name="preferences_cat_updating_data">Updating data</string>
+    <string name="preferences_update_interval">Update interval</string>
+    <string name="preferences_honor_gs">Honor global sync</string>
+    <string name="preferences_honor_gs_summary">Update data with activated global sync only</string>
+    <string name="start_optmenu_preferences">Preferences</string>
 
 </resources>
