--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4,6 +4,7 @@
     <string name="hello">Hello World, ISKforEVEOnlineActivity!</string>
     <string name="app_name">ISK for EVE Online</string>
     <string name="start_pilots">Piloten</string>
+    <string name="start_wallet">Konto</string>
     <string name="pilots_context_remove">Remove API key</string>
     <string name="pilots_optmenu_add">Hinzufügen</string>
     <string name="pilots_optmenu_refresh">Aktualisieren</string>
@@ -32,5 +33,12 @@
     <string name="preferences_honor_gs_summary">Update data with activated global sync only</string>
     <string name="start_optmenu_preferences">Preferences</string>
     <string name="start_optmenu_refresh">Refresh</string>
-
+    <string name="wallet_no_data">No data</string>
+    <string name="wallet_personal_buy">Buy from\u00A0</string>
+    <string name="wallet_personal_sell">Sell to\u00A0</string>
+    <string name="wallet_corp_buy">Corporation buy from\u00A0</string>
+    <string name="wallet_corp_sell">Corporation sell to\u00A0</string>
+    <string name="wallet_taxes">Taxes</string>
+    <string name="wallet_quantity_symbol">\u00A0x\u00A0</string>
+    
 </resources>
