--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -2,9 +2,11 @@
 <resources>
 
     <string name="hello">Hello World, ISKforEVEOnlineActivity!</string>
-    <string name="app_name">ISK for EVE Online</string>
-    <string name="start_pilots">Piloten</string>
-    <string name="start_wallet">Konto</string>
+    <string name="app_name">ISK</string>
+    <string name="launcher_app_name">ISK</string>
+    <string name="start_pilots">Pilots</string>
+    <string name="start_wallet">Wallet</string>
+    <string name="pilots_title">Pilots</string>
     <string name="pilots_context_remove">Remove API key</string>
     <string name="pilots_optmenu_add">Hinzufügen</string>
     <string name="pilots_optmenu_refresh">Aktualisieren</string>
@@ -26,13 +28,16 @@
     <string name="start_character_portrait">Character portrait</string>
     <string name="start_character_choose">Choose character</string>
     <string name="start_optmenu_history">History</string>
+    <string name="history_title">History</string>
     <string name="history_no_data">No data</string>
+    <string name="preferences_title">Preferences</string>
     <string name="preferences_cat_updating_data">Updating data</string>
     <string name="preferences_update_interval">Update interval</string>
     <string name="preferences_honor_gs">Honor global sync</string>
     <string name="preferences_honor_gs_summary">Update data with activated global sync only</string>
     <string name="start_optmenu_preferences">Preferences</string>
     <string name="start_optmenu_refresh">Refresh</string>
+    <string name="wallet_title">Wallet and transactions</string>
     <string name="wallet_no_data">No data</string>
     <string name="wallet_personal_buy">Buy from\u00A0</string>
     <string name="wallet_personal_sell">Sell to\u00A0</string>
