--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -34,7 +34,9 @@
     <string name="preferences_cat_updating_data">Updating data</string>
     <string name="preferences_update_interval">Update interval</string>
     <string name="preferences_honor_gs">Honor global sync</string>
-    <string name="preferences_honor_gs_summary">Update data with activated global sync only</string>
+    <string name="preferences_honor_gs_summary">Update with activated global sync only.</string>
+    <string name="preferences_require_wifi">Require WIFI connection</string>
+    <string name="preferences_require_wifi_summary">Update with active WIFI connection only. Data volume may be 1 MByte and more.</string>
     <string name="start_optmenu_preferences">Preferences</string>
     <string name="start_optmenu_refresh">Refresh</string>
     <string name="wallet_title">Wallet and transactions</string>
