--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -26,9 +26,9 @@
     <string name="pilots_key_error_validate">API-Key konnte nicht geprüft werden, bitte wiederholen Sie den Vorgang.</string>
     <string name="pilots_key_error_accessmask">API-Key hat nicht genügend Rechte. Bitte prüfen.</string>
     <string name="pilots_key_error_type">Nur Character-Keys sind möglich.</string>
-    <string name="pilots_context_refresh">Charactere neu laden</string>
-    <string name="start_character_portrait">Character-Portrait</string>
-    <string name="start_character_choose">Character wählen</string>
+    <string name="pilots_context_refresh">Piloten neu laden</string>
+    <string name="start_character_portrait">Pilot-Portrait</string>
+    <string name="start_character_choose">Pilot wählen</string>
     <string name="start_optmenu_history">Aktualisierungen</string>
     <string name="history_title">Aktualisierungen</string>
     <string name="history_no_data">Keine Daten</string>
