--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -49,6 +49,7 @@
     <string name="wallet_corp_sell">Corporation-Verkauf an\u00A0</string>
     <string name="wallet_taxes">Steuern</string>
     <string name="wallet_quantity_symbol">\u00A0\u00D7\u00A0</string>
+    <string name="wallet_item_image">Item-Bild</string>
     <string name="about_title">Über ISK</string>
     <string name="about_version">ISK für EVE Online 1.0</string>
     <string name="about_copyright">Copyright \u00A9 2012 Matthias Düsterhöft</string>
